添加日志路由

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,14 @@ spring:
           filters:
             # 转发请求时去掉1级前缀
             - StripPrefix=1
+        - id: log-route
+          uri: lb://app-peoplety-log
+          predicates:
+            - Path=/syslog/**
+          filters:
+            # 转发请求时去掉1级前缀
+            - StripPrefix=1
+
 # 配置Redis，限流 127.0.0.1可以省略配置
 redis:
   host: 127.0.0.1
